--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "stripe": "^16.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
